--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_neumorphic: ^3.2.0
+  curved_navigation_bar: ^1.0.3
+  anim_search_bar: ^2.0.3
 
 dev_dependencies:
   flutter_test:
