--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_neumorphic: ^3.2.0
   curved_navigation_bar: ^1.0.3
-  anim_search_bar: ^2.0.3
+  url_launcher: ^6.1.8
+  font_awesome_flutter: ^10.3.0
 
 dev_dependencies:
   flutter_test:
