--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   url_launcher: ^6.1.8
   font_awesome_flutter: ^10.3.0
+  glassmorphism: ^3.0.0
+  pinch_zoom_release_unzoom: ^0.0.12
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +65,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
