--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.1.8
   font_awesome_flutter: ^10.3.0
   firebase_core: ^2.4.1
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
