--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.0.17
   glassmorphism: ^3.0.0
   cloud_firestore: ^4.3.1
+  firebase_messaging: ^14.2.1
 
 dev_dependencies:
   flutter_test:
