--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,6 +1,6 @@
 # flutter_native_splash-development.yaml
 flutter_native_splash:
-  color: "#42a5f5"
+  # color: "#42a5f5"
   image: assets/images/frontLogo.png
   # branding: assets/branding-development.png
   color_dark: "#121212"
